--- a/Autofac.Aop.Tests/packages.config
+++ b/Autofac.Aop.Tests/packages.config
@@ -5,4 +5,5 @@
   <package id="Castle.Core" version="3.1.0" targetFramework="net45" />
   <package id="Moq" version="4.0.10827" targetFramework="net45" />
   <package id="NUnit" version="2.6.2" targetFramework="net45" />
+  <package id="Qualificator.Kernel" version="0.1.0" targetFramework="net45" />
 </packages>
